# duragent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
crates/agnx/: Cargo.toml
crates/agnx-gateway-discord/: Cargo.toml
crates/agnx-gateway-discord/src/: lib.rs  main.rs
crates/agnx-gateway-protocol/: Cargo.toml
crates/agnx-gateway-protocol/src/: lib.rs
crates/agnx-gateway-telegram/: Cargo.toml
crates/agnx-gateway-telegram/src/: lib.rs  main.rs
crates/agnx/src/: api.rs  build_info.rs  config.rs  launcher.rs  lib.rs  main.rs  server.rs  sync.rs
crates/agnx/src/agent/: error.rs  mod.rs  policy.rs  spec.rs  store.rs
crates/agnx/src/auth/: anthropic_oauth.rs  credentials.rs  mod.rs
crates/agnx/src/client/: error.rs  mod.rs  stream.rs
crates/agnx/src/commands/: chat.rs  interactive.rs  login.rs  mod.rs  serve.rs
crates/agnx/src/context/: builder.rs  directives.rs  mod.rs
crates/agnx/src/gateway/: handler.rs  manager.rs  mod.rs  subprocess.rs
crates/agnx/src/handlers/: admin.rs  problem_details.rs
crates/agnx/src/handlers/v1/: agents.rs  mod.rs  sessions.rs
crates/agnx/src/llm/: anthropic.rs  mod.rs  provider.rs  registry.rs  types.rs
crates/agnx/src/memory/: mod.rs  tools.rs
crates/agnx/src/sandbox/: error.rs  mod.rs  trust.rs
crates/agnx/src/scheduler/: error.rs  mod.rs  run_log.rs  schedule.rs  schedule_cache.rs  service.rs  store.rs
crates/agnx/src/session/: actor.rs  actor_types.rs  agentic.rs  chat_request.rs  chat_session_cache.rs  error.rs  event_reader.rs  event_writer.rs  events.rs  handle.rs  mod.rs  persist.rs  recover.rs  registry.rs  resume.rs  snapshot.rs  snapshot_loader.rs  snapshot_writer.rs  sse_stream.rs  stream.rs
crates/agnx/src/store/: mod.rs  policy.rs  schedule.rs  session.rs
crates/agnx/src/store/file/: mod.rs  policy.rs  schedule.rs  session.rs
crates/agnx/src/tools/: cli.rs  error.rs  executor.rs  factory.rs  mod.rs  notify.rs  schedule.rs  tool.rs
crates/agnx/tests/: disconnect_behavior_test.rs  session_persistence_test.rs  session_resume_test.rs  sse_streaming_test.rs
crates/agnx/tests/common/: mod.rs
crates/duragent/: Cargo.toml
crates/duragent-cli/: Cargo.toml
crates/duragent-cli/src/: lib.rs
crates/duragent-client/: Cargo.toml
crates/duragent-client/src/: api.rs  lib.rs
crates/duragent-client/src/client/: error.rs  mod.rs  stream.rs
crates/duragent-client/src/llm/: error.rs  mod.rs  types.rs
crates/duragent-gateway-discord/: Cargo.toml
crates/duragent-gateway-discord/src/: lib.rs  main.rs
crates/duragent-gateway-protocol/: Cargo.toml
crates/duragent-gateway-telegram/: Cargo.toml
crates/duragent-gateway-telegram/src/: chunk.rs  format.rs  lib.rs  main.rs
crates/duragent-types/: Cargo.toml
crates/duragent/src/: background.rs  build_info.rs  config.rs  launcher.rs  lib.rs  main.rs  server.rs  sse_parser.rs  sync.rs
crates/duragent/src/agent/: access.rs  access_eval.rs  error.rs  mod.rs  parsing.rs  policy.rs  policy_eval.rs  policy_ext.rs  skill.rs  spec.rs  spec_eval.rs  store.rs
crates/duragent/src/auth/: anthropic_oauth.rs  credentials.rs
crates/duragent/src/client/: mod.rs  stream.rs
crates/duragent/src/commands/: attach.rs  chat.rs  doctor.rs  init.rs  interactive.rs  login.rs  mod.rs  serve.rs  upgrade.rs
crates/duragent/src/context/: builder.rs  directives.rs  mod.rs  template.rs  tokens.rs  truncation.rs
crates/duragent/src/gateway/: approval.rs  commands.rs  handler.rs  manager.rs  mod.rs  queue.rs  routing.rs  subprocess.rs
crates/duragent/src/handlers/: admin.rs  api_auth.rs  health.rs  mod.rs  problem_details.rs
crates/duragent/src/handlers/v1/: agents.rs  mod.rs  sessions.rs
crates/duragent/src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs  registry.rs
crates/duragent/src/memory/: mod.rs  tools.rs
crates/duragent/src/process/: backend.rs  mod.rs  monitor.rs  registry.rs  tmux.rs
crates/duragent/src/process/registry/: callbacks.rs  io.rs  recovery.rs
crates/duragent/src/sandbox/: error.rs  mod.rs  trust.rs
crates/duragent/src/scheduler/: mod.rs  schedule_cache.rs  schedule_eval.rs  service.rs
crates/duragent/src/session/: actor.rs  actor_types.rs  agentic_loop.rs  chat_session_cache.rs  events.rs  events_eval.rs  handle.rs  mod.rs  registry.rs  snapshot.rs  snapshot_eval.rs
crates/duragent/src/store/: agent.rs  error.rs  mod.rs  run_log.rs  session.rs
crates/duragent/src/store/file/: agent.rs  mod.rs  policy.rs  run_log.rs  schedule.rs  session.rs
crates/duragent/src/tools/: bash.rs  discovery.rs  error.rs  executor.rs  factory.rs  hooks.rs  mod.rs  notify.rs  schedule.rs  tool.rs  web_fetch.rs  web_search.rs
crates/duragent/src/tools/builtins/: background_process.rs  bash.rs  cli.rs  manage_process.rs  memory.rs  mod.rs  reload.rs  schedule.rs  session.rs  spawn_process.rs  web.rs  web_fetch.rs  web_search.rs
crates/duragent/templates/: SOUL.md  SYSTEM_PROMPT.md  agent.yaml  duragent.yaml
crates/duragent/tests/: api_test.rs  session_persistence_test.rs  sse_streaming_test.rs
crates/duragent/tests/common/: mod.rs
docs/: PROJECT_STATUS.md
docs/internal/: README.md
docs/plans/: 202601111100.project-charter.md  202601111101.architecture.md  202601111102.api-reference.md  202601111200.pluto-agent-format.md
docs/specs/: 202601111100.project-charter.md  202601111101.architecture.md  202601111102.api-reference.md  202601111103.deployment.md  202601111200.agnx-agent-format.md  202601111200.duragent-format.md  202601241400.feature-ideas.md  202601271500.gateway-plugins.md  202601301900.tool-policy.md  202601302100.scheduled-tasks.md  202602011500.memory-system.md  202602011700.group-support.md  202602081001.session-lifecycle.md  (+2 more)
src/: config.rs  lib.rs  main.rs  server.rs  sse.rs
tests/: api_test.rs
(+75 files in other folders)
