[package]
name = "agnx"
version = "0.1.0"
edition = "2024"
description = "A minimal and fast self-hosted runtime for durable and portable AI agents"
license = "MIT"
repository = "https://github.com/giosakti/agnx"

[dependencies]
# Async runtime
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["timeout"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lib]
name = "agnx"
path = "src/lib.rs"

[[bin]]
name = "agnx"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
