[workspace]
resolver = "2"
members = [
    "crates/duragent",
    "crates/duragent-gateway-protocol",
    "crates/duragent-gateway-discord",
    "crates/duragent-gateway-telegram",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/giosakti/duragent"

[workspace.dependencies]
# Workspace crates
duragent-gateway-protocol = { path = "crates/duragent-gateway-protocol" }
duragent-gateway-discord = { path = "crates/duragent-gateway-discord" }
duragent-gateway-telegram = { path = "crates/duragent-gateway-telegram" }

# Async runtime
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto / encoding
base64 = "0.22"
sha2 = "0.10"
url = "2"

# Error handling
anyhow = "1"
thiserror = "2.0"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["timeout"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0"

# Unix-specific
libc = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
dashmap = "6"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"

# Gateway: Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "builder", "rustls_backend"] }

# Gateway: Telegram
teloxide = { version = "0.17", features = ["macros"] }

# Dev dependencies
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
lto = true
