[package]
name = "duragent-cli"
description = "Interactive CLI REPL for Duragent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duragent-client = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reedline = { workspace = true }
tokio = { workspace = true }
