[package]
name = "duragent-gateway-telegram"
description = "Telegram gateway for Duragent - can run as built-in or subprocess"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duragent-gateway-protocol = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Telegram
teloxide = { workspace = true }

[lib]
name = "duragent_gateway_telegram"
path = "src/lib.rs"

[[bin]]
name = "duragent-telegram"
path = "src/main.rs"
